// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering tooltip hides on ESC: after mouse rest timeout 1`] = `
<body>
  <div>
    <button
      aria-describedby="tooltip--_REACH_ID_"
      data-reach-tooltip-trigger=""
    >
      Trigger
    </button>
  </div>
  <reach-portal>
    <div
      data-reach-tooltip="true"
      id="tooltip--_REACH_ID_"
      role="tooltip"
      style="left: 0px; top: 8px;"
    >
      Content
    </div>
  </reach-portal>
</body>
`;

exports[`rendering tooltip hides on ESC: not visible after ESC 1`] = `
<body>
  <div>
    <button
      data-reach-tooltip-trigger=""
    >
      Trigger
    </button>
  </div>
</body>
`;

exports[`rendering tooltip shows without timeout when one tooltip is already visible: after mouse rest timeout 1`] = `
<body>
  <div>
    <button
      aria-describedby="tooltip--_REACH_ID_"
      data-reach-tooltip-trigger=""
    >
      First Trigger
    </button>
    <button
      aria-describedby="tooltip--_REACH_ID_"
      data-reach-tooltip-trigger=""
    >
      Second Trigger
    </button>
  </div>
  <reach-portal>
    <div
      data-reach-tooltip="true"
      id="tooltip--_REACH_ID_"
      role="tooltip"
      style="left: 0px; top: 8px;"
    >
      First
    </div>
  </reach-portal>
  <reach-portal>
    <div
      data-reach-tooltip="true"
      id="tooltip--_REACH_ID_"
      role="tooltip"
      style="left: 0px; top: 8px;"
    >
      Second
    </div>
  </reach-portal>
</body>
`;

exports[`rendering tooltip shows without timeout when one tooltip is already visible: after switch without timeout 1`] = `
<body>
  <div>
    <button
      aria-describedby="tooltip--_REACH_ID_"
      data-reach-tooltip-trigger=""
    >
      First Trigger
    </button>
    <button
      aria-describedby="tooltip--_REACH_ID_"
      data-reach-tooltip-trigger=""
    >
      Second Trigger
    </button>
  </div>
  <reach-portal>
    <div
      data-reach-tooltip="true"
      id="tooltip--_REACH_ID_"
      role="tooltip"
      style="left: 0px; top: 8px;"
    >
      First
    </div>
  </reach-portal>
  <reach-portal>
    <div
      data-reach-tooltip="true"
      id="tooltip--_REACH_ID_"
      role="tooltip"
      style="left: 0px; top: 8px;"
    >
      Second
    </div>
  </reach-portal>
</body>
`;

exports[`rendering tooltip shows/hides on hover: after leave timeout 1`] = `
<body>
  <div>
    <button
      data-reach-tooltip-trigger=""
    >
      Trigger
    </button>
  </div>
</body>
`;

exports[`rendering tooltip shows/hides on hover: after mouse rest timeout 1`] = `
<body>
  <div>
    <button
      aria-describedby="tooltip--_REACH_ID_"
      data-reach-tooltip-trigger=""
    >
      Trigger
    </button>
  </div>
  <reach-portal>
    <div
      data-reach-tooltip="true"
      id="tooltip--_REACH_ID_"
      role="tooltip"
      style="left: 0px; top: 8px;"
    >
      Content
    </div>
  </reach-portal>
</body>
`;

exports[`rendering tooltip shows/hides on hover: not visible 1`] = `
<body>
  <div>
    <button
      data-reach-tooltip-trigger=""
    >
      Trigger
    </button>
  </div>
</body>
`;

exports[`rendering tooltip shows/hides when trigger is activeElement: after blur 1`] = `
<body>
  <div>
    <button
      data-reach-tooltip-trigger=""
    >
      Trigger
    </button>
  </div>
</body>
`;

exports[`rendering tooltip shows/hides when trigger is activeElement: after focus 1`] = `
<body>
  <div>
    <button
      aria-describedby="tooltip--_REACH_ID_"
      data-reach-tooltip-trigger=""
    >
      Trigger
    </button>
  </div>
  <reach-portal>
    <div
      data-reach-tooltip="true"
      id="tooltip--_REACH_ID_"
      role="tooltip"
      style="left: 0px; top: 8px;"
    >
      Content
    </div>
  </reach-portal>
</body>
`;

exports[`rendering tooltip shows/hides when trigger is activeElement: not visible 1`] = `
<body>
  <div>
    <button
      data-reach-tooltip-trigger=""
    >
      Trigger
    </button>
  </div>
</body>
`;
